--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Second Chance PC est sur git retentage</title>
+    <title>Second Chance PC est sur git retentageùLKHD</title>
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <script>
