--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       padding: 1rem;
-      background-color: #dd9393;
+      background-color: #9e93dd;
     }
     h1 {
       text-align: center;
