--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       font-family: sans-serif;
       padding: 1rem;
-      background-color: #b30d36;
+      background-color: #f5f5f5;
     }
     h1 {
       text-align: center;
@@ -25,11 +25,26 @@
       margin-top: 0.5rem;
       border-radius: 8px;
     }
+    .row {
+      display: flex;
+      gap: 0.5rem;
+    }
+    .row > * {
+      flex: 1;
+    }
+    button.dicter {
+      flex: 0 0 auto;
+      width: auto;
+      padding: 0.5rem 1rem;
+    }
   </style>
 </head>
 <body>
   <h1>CB Serveur</h1>
-  <input type="number" step="0.01" id="montant" placeholder="Montant (€)" />
+  <div class="row">
+    <input type="number" step="0.01" id="montant" placeholder="Montant (€)" />
+    <button class="dicter" onclick="activerDictee()">🎤 Dicter</button>
+  </div>
   <textarea id="note" placeholder="Note (optionnelle)"></textarea>
   <button onclick="ajouterPaiement()">Ajouter</button>
   <h2>Total : <span id="total">0.00</span> €</h2>
@@ -52,7 +67,7 @@
     }
 
     function ajouterPaiement() {
-      const montant = parseFloat(document.getElementById("montant").value);
+      const montant = parseFloat(document.getElementById("montant").value.replace(',', '.'));
       const note = document.getElementById("note").value;
       if (!isNaN(montant)) {
         paiements.push({ montant, note });
@@ -82,6 +97,11 @@
       a.download = "journal_cb.txt";
       a.click();
       URL.revokeObjectURL(url);
+    }
+
+    function activerDictee() {
+      const champ = document.getElementById("montant");
+      champ.focus();
     }
 
     afficherListe();
