--- a/index.html
+++ b/index.html
@@ -25,29 +25,15 @@
       margin-top: 0.5rem;
       border-radius: 8px;
     }
-    .row {
-      display: flex;
-      gap: 0.5rem;
-    }
-    .row > * {
-      flex: 1;
-    }
-    button.dicter {
-      flex: 0 0 auto;
-      width: auto;
-      padding: 0.5rem 1rem;
-    }
   </style>
 </head>
 <body>
   <h1>CB Serveur</h1>
-  <div class="row">
-    <input type="number" step="0.01" id="montant" placeholder="Montant (€)" />
-    <button class="dicter" onclick="activerDictee()">🎤 Dicter</button>
-  </div>
+  <input type="number" step="0.01" id="montant" placeholder="Montant (€)" />
   <textarea id="note" placeholder="Note (optionnelle)"></textarea>
   <button onclick="ajouterPaiement()">Ajouter</button>
   <h2>Total : <span id="total">0.00</span> €</h2>
+  <h3>Nombre de CB : <span id="compteur">0</span></h3>
   <div id="liste"></div>
   <button onclick="exporter()">📄 Exporter</button>
   <button onclick="reinitialiser()">🗑️ Réinitialiser</button>
@@ -64,6 +50,7 @@
       }
       document.getElementById("liste").innerHTML = html;
       document.getElementById("total").textContent = total.toFixed(2);
+      document.getElementById("compteur").textContent = paiements.length;
     }
 
     function ajouterPaiement() {
@@ -97,11 +84,6 @@
       a.download = "journal_cb.txt";
       a.click();
       URL.revokeObjectURL(url);
-    }
-
-    function activerDictee() {
-      const champ = document.getElementById("montant");
-      champ.focus();
     }
 
     afficherListe();
